changed github link to WilliamSati

--- a/functions/views/contact.ejs
+++ b/functions/views/contact.ejs
@@ -18,7 +18,7 @@
 	<h3>Email: william.sati@mail.utoronto.ca 	</h3> <p></p>
 	<h3>Phone:  647-504-9988	</h3> <p></p>
 	<h3><a href="https://ca.linkedin.com/in/williamsati" target="_blank">LinkedIn </a> </h3> <p></p>
-	<h3><a href="https://github.com/satiwill" target="_blank">Github </a> </h3> <p></p>
+	<h3><a href="https://github.com/WilliamSati" target="_blank">Github </a> </h3> <p></p>
 
 
 
