--- a/functions/views/projects.ejs
+++ b/functions/views/projects.ejs
@@ -1,249 +1,127 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html>
 
-<head>
-	<link href="/assets/header.css" rel="stylesheet" type="text/css" />
+  <head>
 
-	<style>
+    <!-- materializeCSS -->
+      <!-- Compiled and minified CSS -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+      <!-- Compiled and minified JavaScript -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-		img {
-			height: 100%;
-			width: 100%;
-		}
-
-		div.a {
-			 text-align: center;
-		}
-		div.b{
-			text-align: left;
-		}
-		div.padding {
-			padding: 10px;
-		}
-		div.paddingLarge {
-			padding: 50px;		
-		}
-		
-
-		#hiddenDiv1{
-		display: none;
-		text-align: justify;
-		}
-
-		#hiddenDiv2{
-		display: none;
-		text-align: justify;
-		}
-		#hiddenDiv3{
-		display: none;
-		text-align: justify;
-		}
-		#hiddenDiv4{
-		display: none;
-		text-align: justify;
-		}
-
-		div.centeredAndJustified{
-		 text-align: justified;
-		 margin-left: 200px;
-		 margin-right: 200px;
-	}
-		
-
-	</style>
-</head>
-
-<body>
+    <!-- jQuery -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
 
-	<% include navigation.ejs %>
-	
-	<div class="padding">
-	</div>
-	
+    <!-- my own css files -->
+      <link href="assets/css/projects.css" rel="stylesheet" type="text/css" />
+      <link href="assets/css/sidenav.css" rel="stylesheet" type="text/css" />
+      <link href="assets/css/footer.css" rel="stylesheet" type="text/css" />
+    <!-- parallax -->
+      <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>
 
-	<div class="a">
+    <!-- icons -->
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-	
-    
-		<projectTitle>First Response </projectTitle> <p></p>
-		<h2>Let's revolutionize the way paramedics navigate their city  </h2>     <p></p>
-   
-		<iframe width="600" height="400" allowfullscreen="allowfullscreen"
-			src="https://www.youtube.com/embed/enUvFSaLAJU?controls=1">
-		</iframe> <p></p>
+  </head>
+  <body>
 
-		
-		<button id="button1" data-text-swap="Hide"> More </button>
+		<a href="#" data-target="slide-out" class="sidenav-trigger" style="position: fixed; color:black;"><i class="medium material-icons">menu</i></a>
+		<%- include sidenav.ejs %>
 
-		<div id="hiddenDiv1">
-		
-			<div class="centeredAndJustified">
+    <div class="parallax-window" data-parallax="scroll" data-image-src="assets/images/laptopnotebook.jpg">
+    </div>
 
-				 <h4>Right now, as of March 2019, paramedics in Ontario use a navigation system that DOESEN'T TELL THEM WHERE TO GO. 
-				 It gives them point A and point B and it's up to the paramedics to find their way. Only one paramedic
-				 in the car? Too bad, the paramedics are discouraged from using google maps or other mapping applications. Our application 
-				 is fast, simple and secure and always gives the paramedics the fastest way to get to their destination. Ontario can do better. 
-				 Let's revolutionize the way that paramedics navigate their city. </h4>
-			</div>
-		</div>
+    <div class="pageTitleContainer">
+        <h1 class="pageTitle"><strong> Projects </strong></h1>
+    </div>
 
+    <div class="parallax-window" data-parallax="scroll" data-image-src="assets/images/logoclassasker.png">
+    </div>
 
-		<p></p>
-		<p></p>
-		<div class="padding">
-		</div>
+    <div class="projectCard">
+      <div class="projectTitle">
+        <h4><strong><a style="color:black;" target="_blank" href="https://classasker.com"> ClassAsker.com <img src="assets/images/newtab.jpg" style="width:15px; height:15px; position: relative; left:-10px; top:-10px;"></a><strong><h4>
+      </div>
+      <div class="projectImageAndOutcomes">
+        <img class="projectImage dynamicImage" src="assets\images\logoclassasker.png">
 
-		<projectTitle>Boat simulator </projectTitle> 
+        <div class="projectOutcomes">
+          <ol>
+            <li><p class="dynamicList"> Used Google's firebase database to store class questions and votes.</p> </li>
+            <li><p class="dynamicList"> Created javascript functions to update the database when a user submits a question or votes.</p> </li>
+            <li><p class="dynamicList"> Created javascript cloud functions to update the list of questions the user sees in real-time. </p></li>
+            <li><p class="dynamicList"> Made use of the firebase authentification service to keep all user account information.</p> </li>
+          </ol>
+        </div>
+      </div>
+      <hr>
+      <div class="projectDescription">
+        <p class="dynamicDescription"> The goal of classAsker is to help students post their questions and support each other's questions during
+          a lecture in hopes of increasing student-feedback to the professors. ClassAsker is a web-app that enables students to anonymously post the
+          questions they have during lecture to a list that only their class can see. Students are then able to upvote the questions they want to see answered.
+          The questions with the most votes get sorted to the top of the list in real-time for everyone to see.</p>
+      </div>
+    </div>
 
-		<p></p>
+    <div class="parallax-window" data-parallax="scroll" data-image-src="assets/images/firstResponseblue.png">
+    </div>
 
-		<iframe width="600" height="400" allowfullscreen="allowfullscreen"
-			src="https://www.youtube.com/embed/GRIwTppGgKU?controls=1">
-		</iframe> <p></p>
+    <div class="projectCard">
+      <div class="projectTitle">
+        <h4><strong> First Response (Personalized school project) <strong><h4>
+      </div>
+      <div class="projectImageAndOutcomes">
 
-		<button id="button2" data-text-swap="Hide"> More </button>
-		
-		<div id="hiddenDiv2">
+        <iframe allowfullscreen="allowfullscreen" class="projectImage dynamicImage" src="https://www.youtube.com/embed/enUvFSaLAJU?controls=1">
+    		</iframe>
 
-			<div class="centeredAndJustified">
-
-				<h4>A small end of year project for our computer organization course. Programmed entirely in C, this boat simulator follows 
-				realistic acceleration and deceleration and utilies a gyroscope to get user input.</h4>
-
-			</div>
-		</div>
-
-		<p></p>
-		<div class="padding">
-		</div>
-
-		<projectTitle>Verilog Dodge Block </projectTitle> 
-
-		<p></p>
-
-		<iframe width="600" height="400" allowfullscreen="allowfullscreen"
-			src="https://www.youtube.com/embed/E3FBOgJ9I-4?controls=1">
-		</iframe> <p></p>
-
-		<button id="button3" data-text-swap="Hide"> More </button>
-
-		<div id="hiddenDiv3">
-
-			<div class="centeredAndJustified">
-
-				<h4>Although this may not look like much, this game was programmed in verilog. This means that, unlike a regular computer program, I didn't use a
-				processor (computer) to handle instructions expressed by a programming language: this is a completely different kind of project.
-				What we did was use basic logic gates (and, or, not, etc.) to create basic hardware components such as registers, counters, multiplexers, etc. And then used those to create 
-				machines that took in inputs from the user and outputed fixed outputs determined by their wiring and their past states. These are called finite state
-				machines. Our finite state machine would, based off of it's previous state, alternate between drawing the falling blocks, drawing the player and checking 
-				for game legality. All in all this took a solid 1-2 months of work during the school year but was very satisfying in the end.</h4>
-
-			</div>
-		</div>
-
-		<p></p>
-		<div class="padding">
-		</div>
-
-		<projectTitle>Asteroid Shooter </projectTitle> 
-
-		<p></p>
-
-		<iframe width="600" height="400" allowfullscreen="allowfullscreen"
-			src="https://www.youtube.com/embed/JNg7ZtZAtX4?controls=1">
-		</iframe> <p></p>
-
-		<button id="button4" data-text-swap="Hide"> More </button>
-
-		<div id="hiddenDiv4">
-
-					<div class="centeredAndJustified">
-						<h4>This was a school project where the game mechanics were provided to us and we were tasked with creating an AI that 
-						could get the highest score. The AI relies on a linked list that keeps track of the dangerous asteroids and solves a quadratic equation to 
-						find future intersection points between the projectile and the asteroid to increase the space ship's accuracy. After improving the game past the
-						deadline, it scores 20th out of 191 students in the class. 
-						</h4>
-
-					</div>
-		</div>
-
-			<div class="paddingLarge">
-			</div>
-
-	</div>
+        <div class="projectOutcomes">
+          <ol>
+            <li><p class="dynamicList"> Created an API in C++ to interact with the OpenStreetMap database</p> </li>
+            <li><p class="dynamicList"> Created search, route planning and fastest path functionalities</p></li>
+            <li><p class="dynamicList"> Created a User Interface using GTK to interact with functionalities </p></li>
+            <li><p class="dynamicList"> Worked in a team of three.</p></li>
+            <li><p class="dynamicList"> Received a grade of 83 on the project </p></li>
+          </ol>
+        </div>
+      </div>
+      <hr>
+      <div class="projectDescription">
+        <p class="dynamicDescription"> In a class at the University of Toronto, we had four months to build some type of geographic information system (GIS). When talking to a friend, we discovered that
+          paramedics in Ottawa don't have access to a GIS with path-finding functionality, so we decided to build one for them. The find-path functionality always finds the fastest path in less than half
+          a second in any city and provides visual as well as written directions to the destination.</p>
+      </div>
+    </div>
 
 
+    <div style="height:100px;">
+      <h4 style="position:relative; top:50px; margin-left: 5%;"><strong> Other Projects <strong><h4>
+    </div>
 
-</body>
+    <div class="myCarousel">
+        <a class="myCarouselItem" style="display:none;" id="boatSimulator" href="#"><iframe allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/GRIwTppGgKU?controls=1">	</iframe></a>
+        <a class="myCarouselItem" style="display:none;" id="dodgeBlock" href="#"><iframe allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/E3FBOgJ9I-4?controls=1">	</iframe></a>
+        <a class="myCarouselItem" style="display:none;" id="asteroidShooter" href="#"><iframe allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/JNg7ZtZAtX4?controls=1">	</iframe></a>
+    </div>
+    <div class="carouselControls">
+      <a style="display:inline-block;" id="buttonPrev" class="waves-effect waves-light btn">Previous</a>
+      <div style="display:inline-block; width:222px;"></div>
+      <a style="display:inline-block;" id="buttonNext" class="waves-effect waves-light btn">Next</a>
+    </div>
+    <div id="carouselDescription" class="dynamicDescription">
+    </div>
+
+    <div style="height:100px;">
+    </div>
+
+
+		<%- include footer.ejs %>
+
+
+  </body>
+
+  <!-- my own javascript file -->
+    <script src="assets/javascript/projects.js"></script>
+
 </html>
-
-
-
-
-
-
-
-<%# functions to be called %>
-
-<script> 
-var button1 = document.querySelectorAll("button")[0];
-var popup1 = document.getElementById("hiddenDiv1");
-
-button1.addEventListener('click', function() {
-  if (button1.getAttribute("data-text-swap") == button1.innerHTML) {
-    button1.innerHTML = button1.getAttribute("data-text-original");
-	popup1.style.display = "none";
-  } else {
-    button1.setAttribute("data-text-original", button1.innerHTML);
-    button1.innerHTML = button1.getAttribute("data-text-swap");
-	popup1.style.display = "block";
-
-  }
-}, false);
-
-var button2 = document.querySelectorAll("button")[1];
-var popup2 = document.getElementById("hiddenDiv2");
-
-button2.addEventListener('click', function() {
-  if (button2.getAttribute("data-text-swap") == button2.innerHTML) {
-    button2.innerHTML = button2.getAttribute("data-text-original");
-	popup2.style.display = "none";
-  } else {
-    button2.setAttribute("data-text-original", button2.innerHTML);
-    button2.innerHTML = button2.getAttribute("data-text-swap");
-	popup2.style.display = "block";
-
-  }
-}, false);
-
-var button3 = document.querySelectorAll("button")[2];
-var popup3 = document.getElementById("hiddenDiv3");
-
-button3.addEventListener('click', function() {
-  if (button3.getAttribute("data-text-swap") == button3.innerHTML) {
-    button3.innerHTML = button3.getAttribute("data-text-original");
-	popup3.style.display = "none";
-  } else {
-    button3.setAttribute("data-text-original", button3.innerHTML);
-    button3.innerHTML = button3.getAttribute("data-text-swap");
-	popup3.style.display = "block";
-
-  }
-}, false);
-
-var button4 = document.querySelectorAll("button")[3];
-var popup4 = document.getElementById("hiddenDiv4");
-
-button4.addEventListener('click', function() {
-  if (button4.getAttribute("data-text-swap") == button4.innerHTML) {
-    button4.innerHTML = button4.getAttribute("data-text-original");
-	popup4.style.display = "none";
-  } else {
-    button4.setAttribute("data-text-original", button4.innerHTML);
-    button4.innerHTML = button4.getAttribute("data-text-swap");
-	popup4.style.display = "block";
-
-  }
-}, false);
-</script>
