--- a/functions/views/projects.ejs
+++ b/functions/views/projects.ejs
@@ -44,14 +44,15 @@
         <h4><strong><a style="color:black;" target="_blank" href="https://classasker.com"> ClassAsker.com <img src="assets/images/newtab.jpg" style="width:15px; height:15px; position: relative; left:-10px; top:-10px;"></a><strong><h4>
       </div>
       <div class="projectImageAndOutcomes">
-        <img class="projectImage dynamicImage" src="assets\images\logoclassasker.png">
+        <iframe allowfullscreen="allowfullscreen" class="projectImage dynamicImage" src="https://www.youtube.com/embed/Kqua1W7Ognc?controls=1">
+        </iframe>
 
         <div class="projectOutcomes">
           <ol>
-            <li><p class="dynamicList"> Used Google's firebase database to store class questions and votes.</p> </li>
-            <li><p class="dynamicList"> Created javascript functions to update the database when a user submits a question or votes.</p> </li>
-            <li><p class="dynamicList"> Created javascript cloud functions to update the list of questions the user sees in real-time. </p></li>
-            <li><p class="dynamicList"> Made use of the firebase authentification service to keep all user account information.</p> </li>
+            <li><p class="dynamicList"> Stored class questions and votes in a database and updated it in real-time using cloud functions.</p> </li>
+            <li><p class="dynamicList"> Managed the look of the front-end using HTML and CSS and used JavaScript to manage the interactivity.</p> </li>
+            <li><p class="dynamicList"> Created the backend using Node.js and Firebase.  </p></li>
+            <li><p class="dynamicList">	Pitched the product to professors and received a job offer to build a new feedback tool for assignments.</p> </li>
           </ol>
         </div>
       </div>
@@ -79,9 +80,10 @@
         <div class="projectOutcomes">
           <ol>
             <li><p class="dynamicList"> Created an API in C++ to interact with the OpenStreetMap database</p> </li>
-            <li><p class="dynamicList"> Created search, route planning and fastest path functionalities</p></li>
-            <li><p class="dynamicList"> Created a User Interface using GTK to interact with functionalities </p></li>
-            <li><p class="dynamicList"> Worked in a team of three.</p></li>
+            <li><p class="dynamicList"> Created search, route planning and fastest path functionalities using A* algorithm.</p></li>
+            <li><p class="dynamicList"> Used multithreading to increase performance.</p></li>
+            <li><p class="dynamicList"> Created Graphics and a User Interface to interact with the various functionalities.</p></li>
+            <li><p class="dynamicList">	Worked in a team of three and used Git to manage code.</p></li>
             <li><p class="dynamicList"> Received a grade of 83 on the project </p></li>
           </ol>
         </div>
