changed node version. Added 407 experience and poetify project

--- a/functions/views/experience.ejs
+++ b/functions/views/experience.ejs
@@ -36,6 +36,30 @@
         <h1 class="pageTitle"><strong> Experience </strong></h1>
     </div>
 
+
+    <div class="parallax-window" data-parallax="scroll" data-image-src="assets/images/407ETRLogoSmall.jpg">
+    </div>
+
+    <div class="projectCard">
+      <div class="projectTitle">
+        <h4><strong> Agile Software Developer, 407ETR (All-Electronic Open-Access Toll Highway)<strong><h4>
+      </div>
+      <div class="projectImageAndOutcomes">
+        <img class="projectImage dynamicImage" src="assets\images\gantry.jpg">
+        </iframe>
+        <div class="projectOutcomes">
+          <ol>
+            <li><p class="dynamicList">	Helped create a back-end java system that updates customer information based on reported changes from transportation agencies.</p></li>
+            <li><p class="dynamicList"> Created a dynamic password validator to address customer complaints about new password requirements.</p></li>
+            <li><p class="dynamicList"> Automated the collection and visualization of customer interaction data using google analytics and presented analytics to business stakeholders, receiving positive feedback.</p></li>
+            <li><p class="dynamicList"> Helped refactor the public web-app to use modern ERP services and to offload sensitive data storage to Datex.</p></li>
+            <li><p class="dynamicList"> Helped develop a page in a react web-app where the highway operations team can log when roads are cleared of snow where all edits are stored in a database and permissions vary based on the user.</p></li>
+            <li><p class="dynamicList"> Participated in interviews for new interns, assessing their technical ability and helping to select 2 new interns.</p></li>
+          </ol>
+        </div>
+      </div>
+    </div>
+
     <div class="parallax-window" data-parallax="scroll" data-image-src="assets/images/uoftLogo.png">
     </div>
 
