--- a/functions/views/projects.ejs
+++ b/functions/views/projects.ejs
@@ -36,6 +36,34 @@
         <h1 class="pageTitle"><strong> Projects </strong></h1>
     </div>
 
+    <div class="parallax-window" data-parallax="scroll" data-image-src="assets/images/Poetify.png">
+    </div>
+
+    <div class="projectCard">
+      <div class="projectTitle">
+        <h4><strong> Poetify <strong><h4>
+        </div>
+      <div class="projectImageAndOutcomes">
+        <iframe allowfullscreen="allowfullscreen" class="projectImage dynamicImage" src="https://www.youtube.com/embed/3ct_L_gXvRs?controls=1">
+        </iframe>
+
+        <div class="projectOutcomes">
+          <ol>
+            <li><p class="dynamicList"> Fine-tuned T5 and GPT2 transformer networks to be able to summarize reviews then expand them into poems.</p> </li>
+            <li><p class="dynamicList"> Used Python with Pandas, NumPy and PyTorch to clean and pre-process large text-based datasets.</p> </li>
+            <li><p class="dynamicList"> Created a web-app to host the project at <a target="_blank" href="https://poetify.anvil.app">poetify.anvil.app</a> (Only available on request).</p></li>
+            <li><p class="dynamicList">	Received a 95% on project presentation and 85% on the final report.</p> </li>
+          </ol>
+        </div>
+      </div>
+      <hr>
+      <div class="projectDescription">
+        <p class="dynamicDescription"> Poetify is a machine learning system capable of taking in a review such as a yelp review 
+          or an amazon review and outputting a poem related to that review. Ideally, the poem will retain the general topic as is
+          addressed in the review and will keep the same sentiment towards what is being reviewed.</p>
+      </div>
+    </div>
+
     <div class="parallax-window" data-parallax="scroll" data-image-src="assets/images/logoclassasker.png">
     </div>
 
